src/components/ResultsScreen.css
.results {
  width: 100%;
  height: 100%;
  min-height: 0;
  box-sizing: border-box;
  padding: 1vh 0 0 0;
  display: flex;
  flex-direction: column;
}

.results>div:first-child {
  margin: 1vh;
}

.results-main-container {
  display: flex;
  width: 100%;
  height: 100%;
  padding: 1vh 1vh;
  box-sizing: border-box;
  overflow-y: clip;
}

.titles {
  box-sizing: border-box;
  display: flex;
  border-top: 1px solid var(--color-accent);
  border-bottom: 1px solid var(--color-accent);
  box-sizing: border-box;
  padding: 0.5vh 2vh;
  margin: 0.5vh 0;
}

.results-list-selector {
  display: flex;
  flex-direction: row;
  cursor: pointer;
}

.results-list-selector>div {
  width: 100%;
}

.results-list-selector>div.selected {
  background-color: var(--color-background-dark-alt);
}


/* @media screen and (orientation: landscape) { */
  .results-main-container.landscape>div {
    min-width: 33%;
    width: fit-content;
    height: 100%;
    padding-right: .25vh;
  }

  .results-main-container.landscape>div:first-child {
    margin-right: auto;
  }
  .results-main-container.landscape>div:last-child {
    margin-left: auto;
  }

  .titles.landscape>div {
    min-width: 33%;
    width: fit-content;
  }


  .results-list-selector.landscape {
    display: none;
    visibility: hidden;
  }

  .titles.landscape>div:first-child {
    margin-right: auto;
    margin-left: 5px;
  }

  .titles.landscape>div:last-child {
    margin-left: auto;
    margin-right: 5px;
  }
/* }

@media screen and (orientation: portrait) { */
  .results-list-selector.portrait {
    display: flex;
    flex-direction: row;
    visibility: initial;
  }
  .results-found-words.portrait {
    width: 100%;
  }
  .results-missed-words.portrait {
    width: 100%;
  }
  .titles.portrait>div {
    width: 100%;
    margin: auto;
    text-align: center;
  }
  .titles.portrait>.disabled {
    visibility: hidden;
    display: none;
  }
  .results-main-container.portrait>div.disabled {
    visibility: hidden;
    display: none;
  }

